--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -3,6 +3,7 @@
 <head>
     <title>HTML practice page</title>
     <link rel="stylesheet" type="text/css" href="SylviasStyleSheet.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <!--Practicing adding backgrounds--><!--Mark's comment 7/17: Add an eternal .css stylesheet.-->
 </head>
 <body>
