--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -4,10 +4,11 @@
     <title>HTML practice page</title>
     <link rel="stylesheet" type="text/css" href="SylviasStyleSheet.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <!--Practicing adding backgrounds--><!--Mark's comment 7/17: Add an eternal .css stylesheet.-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
 <!--This is how a comment is made in HTML.-->
+<div class="container">
     <h1>Welcome to Sylvia's HTML practice page!</h1>
         <p>
             This is my first HTML practice page. Here, I will be learning html using some basic tags!
@@ -16,6 +17,7 @@
         <p>
             Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
         </p>
+</div>
 <!--This section is for practicing html tags.-->
         <hr>
         <h1>Basic Intro to HTML</h1>
