--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <!--This is how a comment is made in HTML.-->
+<!--Adding a container-->
 <div class="container">
     <h1>Welcome to Sylvia's HTML practice page!</h1>
         <p>
@@ -27,7 +28,9 @@
         <p>
         In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
         </p>
+<!--Adding a width container-->
 <!--How to use dividers-->
+<div class="container-fluid">
     <h2>Using Dividers</h2>
         <div id="identified"></div>
         <div>
@@ -35,6 +38,7 @@
             <br>
             It may seem indifferent to making paragraphs since they are similar to each other. However, if you pay close attention to how the text is cluttered, you'll notice it.
         </div>
+</div>
 <!--Using the Span Tag-->
     <h2>Using the Span Tag</h2>
         <p>
