--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -20,6 +20,8 @@
         </p>
 </div>
 <!--This section is for practicing html tags.-->
+<!--Adding a container-->
+<div classes="container">
         <hr>
         <h1>Basic Intro to HTML</h1>
         <!--Playing with adding another hr-->
@@ -28,9 +30,11 @@
         <p>
         In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
         </p>
+    </div>
 <!--Adding a width container-->
 <!--How to use dividers-->
-<div class="container-fluid">
+<!--Adding a container fluid-->
+<div classes="container-fluid">
     <h2>Using Dividers</h2>
         <div id="identified"></div>
         <div>
@@ -40,25 +44,36 @@
         </div>
 </div>
 <!--Using the Span Tag-->
+<!--Adding a container-->
+<div classes="container">
     <h2>Using the Span Tag</h2>
         <p>
             By using the span tag, you can style your words and change the font of them. For example:
             I like the color <span style="color:plum">plum</span> a lot!
         </p>
+</div>
 <!--How to use Line Breaks-->
+    <!--Adding a container-->
+<div classes="container">
     <h2>Implementing Line Breaks</h2>
         <p>
             Let's say we're making a long paragraph and you want to make a sentence go onto the next line. By doing so, we use the tag br, which means to "break" a line.
             <br>
             This is an example of it!
         </p>
+</div>
+<!--Adding a container-->
 <!--How to Emphasize Text-->
+<div classes="container"> 
     <h2>Emphasizing Text</h2>
         <p>
             Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. 
             I could  also create italic text by using an i tag like <i>this</i>
         </p>
+</div>
 <!--How to create a table-->
+<!--Adding a container fluid-->
+<div classes="container-fluid"> 
 <h2>Creating A Table</h2>
         <p>
             Creating a table may seem intimidating but you can create a table by 
@@ -94,6 +109,9 @@
                 </tr>
             </tbody>
         </table>
+</div>
+<!--Adding a container fluid-->
+<div classes="container-fluid"> 
             <h2>Creating A List</h2>
                 <p>
                     A list in HTML can be created in three different ways: Ordered (ol), Unordered (ul), and descriptive (dl).
@@ -130,6 +148,9 @@
                     <p>
                         Unordered lists in HTML <b>appear bulleted</b>
                     </p>
+</div>
+<!--Adding a container fluid-->
+<div classes="container-fluid"> 
             <!--Description lists provide detaied descriptions about an item within a list-->
             <h2>Description Lists</h2>
                 <p>
@@ -147,6 +168,9 @@
                 <p>
                     Description lists have <b>three</b> different tags: dl <b>(description list)</b>, dt <b>(defined term)</b>, and dd <b>(the description of each term)</b>.
                 </p>
+</div>
+<!--Adding a container fluid-->
+<div classes="container-fluid"> 
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
@@ -159,6 +183,9 @@
                 If I were to unindent/delete comments for my code for the table above then I could've been easily 
                 gotten confused while writing my code. I could've also lost some of my code if something were to happen.
             </p>
+</div>
+<!--Adding a container fluid-->
+<div classes="container-fluid"> 
 <hr>
         <!--Adding an Image-->
             <!--Changed link + changed width-->
@@ -172,5 +199,6 @@
                 <p>
                     <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
                 </p>
-    </body>
+</div>
+</body>
 </html>
