--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -7,9 +7,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
+<!--Navbar-->
+    <nav class="pl-md-5 navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+        <a class="navar-brand" href="https://github.com/Sylviale101/">BIMD 233 Page</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+            <span class="nav-bar-toggler-icon"></span>
+        </button>
+        <div id="myNavBar" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Team Index Page</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a id="navbasedrop" class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
+                        Project Pages
+                        ::after
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="https://lily-cs.github.io/Team2CascadingStyleSheet/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">CSS Page</a>
+                        <a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">HTML Page</a>
+                    </div>
+                </li>
+        </ul>
+    </div>
+</nav>
 <!--This is how a comment is made in HTML.-->
 <!--Adding a container-->
-<div class="container">
+<div class="container-fluid">
     <h1>Welcome to Sylvia's HTML practice page!</h1>
         <p>
             This is my first HTML practice page. Here, I will be learning html using some basic tags!
@@ -18,10 +42,7 @@
         <p>
             Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
         </p>
-</div>
 <!--This section is for practicing html tags.-->
-<!--Adding a container-->
-<div classes="container">
         <hr>
         <h1>Basic Intro to HTML</h1>
         <!--Playing with adding another hr-->
@@ -30,11 +51,8 @@
         <p>
         In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
         </p>
-    </div>
 <!--Adding a width container-->
 <!--How to use dividers-->
-<!--Adding a container fluid-->
-<div classes="container-fluid">
     <h2>Using Dividers</h2>
         <div id="identified"></div>
         <div>
@@ -42,38 +60,27 @@
             <br>
             It may seem indifferent to making paragraphs since they are similar to each other. However, if you pay close attention to how the text is cluttered, you'll notice it.
         </div>
-</div>
 <!--Using the Span Tag-->
 <!--Adding a container-->
-<div classes="container">
     <h2>Using the Span Tag</h2>
         <p>
             By using the span tag, you can style your words and change the font of them. For example:
             I like the color <span style="color:plum">plum</span> a lot!
         </p>
-</div>
 <!--How to use Line Breaks-->
-    <!--Adding a container-->
-<div classes="container">
     <h2>Implementing Line Breaks</h2>
         <p>
             Let's say we're making a long paragraph and you want to make a sentence go onto the next line. By doing so, we use the tag br, which means to "break" a line.
             <br>
             This is an example of it!
         </p>
-</div>
-<!--Adding a container-->
 <!--How to Emphasize Text-->
-<div classes="container"> 
     <h2>Emphasizing Text</h2>
         <p>
             Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. 
             I could  also create italic text by using an i tag like <i>this</i>
         </p>
-</div>
 <!--How to create a table-->
-<!--Adding a container fluid-->
-<div classes="container-fluid"> 
 <h2>Creating A Table</h2>
         <p>
             Creating a table may seem intimidating but you can create a table by 
@@ -109,9 +116,6 @@
                 </tr>
             </tbody>
         </table>
-</div>
-<!--Adding a container fluid-->
-<div classes="container-fluid"> 
             <h2>Creating A List</h2>
                 <p>
                     A list in HTML can be created in three different ways: Ordered (ol), Unordered (ul), and descriptive (dl).
@@ -148,9 +152,6 @@
                     <p>
                         Unordered lists in HTML <b>appear bulleted</b>
                     </p>
-</div>
-<!--Adding a container fluid-->
-<div classes="container-fluid"> 
             <!--Description lists provide detaied descriptions about an item within a list-->
             <h2>Description Lists</h2>
                 <p>
@@ -168,9 +169,6 @@
                 <p>
                     Description lists have <b>three</b> different tags: dl <b>(description list)</b>, dt <b>(defined term)</b>, and dd <b>(the description of each term)</b>.
                 </p>
-</div>
-<!--Adding a container fluid-->
-<div classes="container-fluid"> 
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
@@ -183,9 +181,6 @@
                 If I were to unindent/delete comments for my code for the table above then I could've been easily 
                 gotten confused while writing my code. I could've also lost some of my code if something were to happen.
             </p>
-</div>
-<!--Adding a container fluid-->
-<div classes="container-fluid"> 
 <hr>
         <!--Adding an Image-->
             <!--Changed link + changed width-->
