--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>HTML practice page</title>
+    <!--Bootstrap Stuff-->
     <link rel="stylesheet" type="text/css" href="SylviasStyleSheet.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <!--Icon Stylesheet-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
 <!--Navbar-->
@@ -173,7 +176,7 @@
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
             <p>
-                Here is a link to my Project page: <a href="https://github.com/Sylviale101/Sylviale101.github.io">Github Repository</a>
+                Here is a link to my Project page: <i class="fa-brands fa-github"></i> <a href="https://github.com/Sylviale101/Sylviale101.github.io">Github Repository</a>
             </p>
             <h3>Notes</h3>
             <p>
