--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -176,11 +176,18 @@
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
             <p>
-                Here is a link to my Project page: <i class="fa-brands fa-github"></i> <a href="https://github.com/Sylviale101/Sylviale101.github.io">Github Repository</a>
+                <!--Testing adding an icon-->
+                Here is a link to my Project page: 
+                <!--Added a line break-->
+                <br>
+                <i class="fa-brands fa-github"></i>
+                <a href="https://github.com/Sylviale101/Sylviale101.github.io"> Github Repository</a>
             </p>
             <h3>Notes</h3>
             <p>
                 Indentation, consistently saving and commenting while coding is an important habit to have. 
+                <!--Added a Line Break-->
+                <br>
                 If I were to unindent/delete comments for my code for the table above then I could've been easily 
                 gotten confused while writing my code. I could've also lost some of my code if something were to happen.
             </p>
