--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -180,8 +180,7 @@
                 Here is a link to my Project page: 
                 <!--Added a line break-->
                 <br>
-                <i class="fa-brands fa-github"></i>
-                <a href="https://github.com/Sylviale101/Sylviale101.github.io"> Github Repository</a>
+                <i class="fa-brands fa-github"></i> <a href="https://github.com/Sylviale101/Sylviale101.github.io"> Github Repository</a>
             </p>
             <h3>Notes</h3>
             <p>
