--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -37,6 +37,8 @@
 <!--This is how a comment is made in HTML.-->
 <!--Adding a container-->
 <div class="container-fluid">
+<!--Flex box-->
+<div class="col-md-8">
     <h1>Welcome to Sylvia's HTML practice page!</h1>
         <p>
             This is my first HTML practice page. Here, I will be learning html using some basic tags!
@@ -45,6 +47,7 @@
         <p>
             Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
         </p>
+</div>
 <!--This section is for practicing html tags.-->
         <hr>
         <h1>Basic Intro to HTML</h1>
