--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -38,7 +38,7 @@
 <!--Adding a container-->
 <div class="container-fluid">
 <!--Flex box-->
-<div clas="row">
+<div class="row">
     <div class="col">
     <h1>Welcome to Sylvia's HTML practice page!</h1>
         <p>
