--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -38,7 +38,8 @@
 <!--Adding a container-->
 <div class="container-fluid">
     <!--Flex box-->
-        <div class="col">
+        <div class="row">
+            <div class="col">
         <h1>Welcome to Sylvia's HTML practice page!</h1>
         <p>
             This is my first HTML practice page. Here, I will be learning html using some basic tags!
@@ -47,7 +48,7 @@
         <p>
             Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
         </p>
-    </div>
+        </div>
 </div>
 <!--This section is for practicing html tags.-->
         <hr>
@@ -207,5 +208,6 @@
                 <p>
                     <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
                 </p>
+</div>
 </body>
 </html>
