--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -36,18 +36,20 @@
 </nav>
 <!--This is how a comment is made in HTML.-->
 <!--Adding a container-->
-<div class="container-fluid">
+<div class="container">
     <!--Flex box-->
         <div class="row">
             <div class="col">
-        <h1>Welcome to Sylvia's HTML practice page!</h1>
-        <p>
-            This is my first HTML practice page. Here, I will be learning html using some basic tags!
-        </p>
-        <h3>Notes</h3>
-        <p>
-            Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
-        </p>
+            <h1>Welcome to Sylvia's HTML practice page!</h1>
+            <p>
+             This is my first HTML practice page. Here, I will be learning html using some basic tags!
+            </p>
+        </div>
+        <div class="col">
+            <h3>Notes</h3>
+            <p>
+                Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
+            </p>
         </div>
 </div>
 <!--This section is for practicing html tags.-->
