--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -16,7 +16,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
             <span class="nav-bar-toggler-icon"></span>
         </button>
-        <div id="myNavBar" class="collapse navbar-collapse">
+        <div id="myNavbar" class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Team Index Page</a>
