--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -18,7 +18,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar" aria-expanded="false">
             <span class="nav-bar-toggler-icon"></span>
         </button>
-        <div id="myNavbar" class="navbar-collapse collapse" style="">
+        <div id="myNavbar" class="collapse" style="">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Team Index Page</a>
