--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -15,7 +15,7 @@
 <!--Navbar-->
     <nav class="pl-md-8 navbar navbar-expand-md bg-dark navbar-dark fixed-top">
         <a class="navar-brand" href="https://github.com/Sylviale101/">BIMD 233 Page</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar" aria-controls="myNavbar aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="myNavbar" class="collapse" style="">
