Test - Icon Attempt

--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -180,10 +180,10 @@
         <h1>Team Project Page</h1>
             <p>
                 <!--Testing adding an icon-->
-                Here is a link to my Project page: 
+                Here is a link to my Personal Project page: 
                 <!--Added a line break-->
                 <br>
-                <i class="fa-brands fa-github"></i> <a href="https://github.com/Sylviale101"> Github Repository</a>
+                <i class="bi bi-github"></i> <a href="https://github.com/Sylviale101"> Github Repository</a>
             </p>
             <h3>Notes</h3>
             <p>
