--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -49,6 +49,7 @@
             </p>
 </div>
 <!--This section is for practicing html tags.-->
+<div class="container">
         <hr>
         <h1>Basic Intro to HTML</h1>
         <!--Playing with adding another hr-->
@@ -57,8 +58,10 @@
         <p>
         In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
         </p>
+</div>
 <!--Adding a width container-->
 <!--How to use dividers-->
+<div class="container">
     <h2>Using Dividers</h2>
         <div id="identified"></div>
         <div>
@@ -66,27 +69,35 @@
             <br>
             It may seem indifferent to making paragraphs since they are similar to each other. However, if you pay close attention to how the text is cluttered, you'll notice it.
         </div>
+</div>
 <!--Using the Span Tag-->
 <!--Adding a container-->
+<div class="container">
     <h2>Using the Span Tag</h2>
         <p>
             By using the span tag, you can style your words and change the font of them. For example:
             I like the color <span style="color:plum">plum</span> a lot!
         </p>
+</div>
 <!--How to use Line Breaks-->
+<div class="container">
     <h2>Implementing Line Breaks</h2>
         <p>
             Let's say we're making a long paragraph and you want to make a sentence go onto the next line. By doing so, we use the tag br, which means to "break" a line.
             <br>
             This is an example of it!
         </p>
+</div>
 <!--How to Emphasize Text-->
+<div class="container">
     <h2>Emphasizing Text</h2>
         <p>
             Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. 
             I could  also create italic text by using an i tag like <i>this</i>
         </p>
+</div>
 <!--How to create a table-->
+<div class="container">
 <h2>Creating A Table</h2>
         <p>
             Creating a table may seem intimidating but you can create a table by 
@@ -122,6 +133,8 @@
                 </tr>
             </tbody>
         </table>
+</div>
+<div class="container">
             <h2>Creating A List</h2>
                 <p>
                     A list in HTML can be created in three different ways: Ordered (ol), Unordered (ul), and descriptive (dl).
@@ -158,6 +171,8 @@
                     <p>
                         Unordered lists in HTML <b>appear bulleted</b>
                     </p>
+</div>
+<div class="container">
             <!--Description lists provide detaied descriptions about an item within a list-->
             <h2>Description Lists</h2>
                 <p>
@@ -175,6 +190,8 @@
                 <p>
                     Description lists have <b>three</b> different tags: dl <b>(description list)</b>, dt <b>(defined term)</b>, and dd <b>(the description of each term)</b>.
                 </p>
+</div>
+<div class="container">
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
@@ -193,7 +210,9 @@
                 If I were to unindent/delete comments for my code for the table above then I could've been easily 
                 gotten confused while writing my code. I could've also lost some of my code if something were to happen.
             </p>
+</div>
 <hr>
+<div class="container">
         <!--Adding an Image-->
             <!--Changed link + changed width-->
                 <img src="https://sylviale101.github.io/Images/estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" id="image2" alt="Studying by Estée Janssens"/><!--Mark's comment 7/17: replace width attribute with a stylesheet. And while you're at it, use relative sizing (e.g., 50%) rather tha hardcoding it to 500 pixels.-->
@@ -206,6 +225,7 @@
                 <p>
                     <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
                 </p>
+</div>
 </div>
 </body>
 </html>
