--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -40,7 +40,7 @@
 <!--Adding a container-->
 <div class="container">
     <!--Flex box-->
-    <div class="d-flex p-2">
+    <div class="container">
             <h1>Welcome to Sylvia's HTML practice page!</h1>
             <p>
              This is my first HTML practice page. Here, I will be learning html using some basic tags!
