--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -216,8 +216,9 @@
 <div class="container">
         <!--Adding an Image-->
             <!--Changed link + changed width-->
-
-                <img src="https://sylviale101.github.io/Images/estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" id="image2" alt="Studying by Estée Janssens"/><!--Mark's comment 7/17: replace width attribute with a stylesheet. And while you're at it, use relative sizing (e.g., 50%) rather tha hardcoding it to 500 pixels.-->
+            <div id="image2">
+                <img src="https://sylviale101.github.io/Images/estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" alt="Studying by Estée Janssens"/><!--Mark's comment 7/17: replace width attribute with a stylesheet. And while you're at it, use relative sizing (e.g., 50%) rather tha hardcoding it to 500 pixels.-->
+            </div>
                 <h2>Credits</h2>
                 <!--Credits Section-->
                 <p>
