--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -108,6 +108,7 @@
         </p> 
         <!--Creating the body of a table--><!--Mark's comment 7/17: replace the border and width attributes with a stylesheet.-->
         <table>
+            <div id="table">
             <tbody>
                 <!--Creating rows for a table-->
                 <tr>
@@ -131,7 +132,8 @@
                     </td>
                 </tr>
             </tbody>
-        </table>
+            </table>
+         </div>
 </div>
 <div class="container">
             <h2>Creating A List</h2>
