--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -38,6 +38,7 @@
 <div class="container">
     <!--Flex box-->
     <div class="container">
+        <div id="title">
             <h1>Welcome to Sylvia's HTML practice page!</h1>
             <p>
              This is my first HTML practice page. Here, I will be learning html using some basic tags!
@@ -46,6 +47,7 @@
             <p>
                 Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
             </p>
+        </div>
 </div>
 <!--This section is for practicing html tags.-->
 <div class="container">
