--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -219,7 +219,7 @@
                 <!--Credits Section-->
                 <p>
                     <!--Hyperlinking a text-->
-                    <b>Image Credits to:</b> Estée Janssens on <a href="https://unsplash.com/s/photos/study-aesthetic?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                    <b>Image Credits to:</b> Estée Janssens on <a href="https://unsplash.com/s/photos/study-aesthetic?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="unsplash">Unsplash</a>
                 </p>
                 <p>
                     <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
