--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--Navbar-->
-    <nav class="pl-md-8 navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+    <nav class="pl-md-8 navbar navbar-expand-md bg-dark navbar-dark sticky-top">
         <a class="navar-brand" href="https://github.com/Sylviale101/">BIMD 233 Page</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,6 +50,7 @@
         </div>
 </div>
 <!--This section is for practicing html tags.-->
+<!--Added a container-->
 <div class="container">
         <hr>
         <h1>Basic Intro to HTML</h1>
@@ -62,6 +63,7 @@
 </div>
 <!--Adding a width container-->
 <!--How to use dividers-->
+<!--Added a container-->
 <div class="container">
     <h2>Using Dividers</h2>
         <div id="identified"></div>
@@ -90,6 +92,7 @@
         </p>
 </div>
 <!--How to Emphasize Text-->
+<!--Added a container-->
 <div class="container">
     <h2>Emphasizing Text</h2>
         <p>
@@ -98,6 +101,7 @@
         </p>
 </div>
 <!--How to create a table-->
+<!--Added a container-->
 <div class="container">
 <h2>Creating A Table</h2>
         <p>
@@ -109,6 +113,7 @@
             </p>
         </p> 
         <!--Creating the body of a table--><!--Mark's comment 7/17: replace the border and width attributes with a stylesheet.-->
+            <!--Table changes to suit bootstrap better-->
         <table class="table">
             <thead>
               <tr>
@@ -127,6 +132,7 @@
               </tr>
             </tbody>
           </table>
+ <!--Added a container-->
 <div class="container">
             <h2>Creating A List</h2>
                 <p>
@@ -165,6 +171,7 @@
                         Unordered lists in HTML <b>appear bulleted</b>
                     </p>
 </div>
+<!--Added a container-->
 <div class="container">
             <!--Description lists provide detaied descriptions about an item within a list-->
             <h2>Description Lists</h2>
@@ -184,6 +191,7 @@
                     Description lists have <b>three</b> different tags: dl <b>(description list)</b>, dt <b>(defined term)</b>, and dd <b>(the description of each term)</b>.
                 </p>
 </div>
+<!--Added a container-->
 <div class="container">
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
@@ -208,6 +216,7 @@
             </p>
 </div>
 <hr>
+<!--Added a container-->
 <div class="container">
         <!--Adding an Image-->
             <!--Changed link + changed width-->
