--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -16,21 +16,17 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="myNavbar" class="collapse navbar-collapse" style="">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Team Index Page</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a id="navbasedrop" class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
-                        Project Pages
-                    </a>
-                    ::after
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="https://lily-cs.github.io/Team2CascadingStyleSheet/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">CSS Page</a>
-                        <a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">HTML Page</a>
-                    </div>
-                </li>
-        </ul>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
     </div>
 </nav>
 <!--This is how a comment is made in HTML.-->
