--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -16,6 +16,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="myNavbar" class="collapse navbar-collapse" style="">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
@@ -27,6 +28,7 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
+            </ul>
     </div>
 </nav>
 <!--This is how a comment is made in HTML.-->
