--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -188,6 +188,21 @@
                     Description lists have <b>three</b> different tags: dl <b>(description list)</b>, dt <b>(defined term)</b>, and dd <b>(the description of each term)</b>.
                 </p>
 </div>
+<!--Adding a grid system by making columns-->
+<div class="container text-center">
+    <div class="row">
+      <div class="col">  
+        <h2>Bootstrap Grid Systems</h2>
+        <p>
+            This is an example of a grid system. 
+        </p>
+      </div>
+        <div class="col">
+            <p>
+             By creating a grid system through using bootstrap, you can divide a section of your webpage in half like this.
+            </p>
+        </div>
+</div>
 <!--Added a container-->
 <div class="container">
 <hr>
