added additional comments

--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -234,6 +234,7 @@
         <!--Adding an Image-->
             <!--Changed link + changed width-->
             <class id="image2">
+                <!--Rounded the corners of the image using bootstrap-->
                 <img src="https://sylviale101.github.io/Images/estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" class="figure-img img-fluid rounded" alt="Studying by Estée Janssens"/>
             </class>
             </div>
