--- a/Individual Project/project.html
+++ b/Individual Project/project.html
@@ -9,5 +9,47 @@
 </head>
 <body>
 <!--Navbar-->
+<!--Navbar color - Bootstrap 5.2.0-->
+<!--Navbar Icon-->
+<nav class="navbar">
+<!--Navbar Code-->
+
+<div class="container-fluid">
+    <nav class="navbar" style="background-color: pink;">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!--Navbar 'Brand' Icon-->
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box" viewBox="0 0 16 16">
+        <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
+     </svg>
+    <a class="navbar-brand" href="#"> Sylvia's Portfolio Page</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home Page</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active">Resume</a>
+        </li>
+      </ul>
+      <!--Navbar search box-->
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+<!--Landing Page-->
+<p>
+    Hello, I'm Sylvia Le
+    <br>
+    Welcome to My Personal Portfolio Page!
+    Sophomore @ the University of Washington 
+</p>
+</nav>
 </body>
 </html>
