--- a/Individual Project/project.html
+++ b/Individual Project/project.html
@@ -13,7 +13,6 @@
 <!--Navbar Icon-->
 <nav class="navbar">
 <!--Navbar Code-->
-
 <div class="container-fluid">
     <nav class="navbar" style="background-color: pink;">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,9 +25,13 @@
     <a class="navbar-brand" href="#"> Sylvia's Portfolio Page</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <!--Menu Items-->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home Page</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Projects</a>
+          </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About Me</a>
         </li>
@@ -43,13 +46,18 @@
       </form>
     </div>
   </div>
-<!--Landing Page-->
-<p>
-    Hello, I'm Sylvia Le
-    <br>
-    Welcome to My Personal Portfolio Page!
-    Sophomore @ the University of Washington 
-</p>
 </nav>
-</body>
+<!--Landing Page - HTML-->
+    <p>
+     Hello, I'm Sylvia Le
+    <br>
+        Welcome to My Personal Portfolio Page!
+    <br>
+        Sophomore @ The University of Washington Bothell |  Hodophile | Foodie 
+    </p>
+<!--Linking Image to a URL - JavaScript-->
+    <a href="https://sylviale101.github.io/HTML/Sylviale101.html">
+        <img alt="html page" src="/Images/html.png" >
+    </a>
+    </body>
 </html>
