--- a/resumepage.html/landingpage.html
+++ b/resumepage.html/landingpage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>HTML practice page</title>
-    <!--Bootstrap Stuff-->
+    <!--Bootstrap Stuff + Linking CSS Style Sheets-->
     <link rel="stylesheet" type="text/css" href="styleSheet.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -10,7 +10,7 @@
 <body>
 <!--Navbar-->
 <!--Navbar color - Bootstrap 5.2.0-->
-<!--Navbar Icon-->
+<!--Navbar Icon - HTML-->
 <nav class="navbar">
 <!--Navbar Code-->
 <div class="container-fluid">
@@ -19,7 +19,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <!--Navbar 'Brand' Icon-->
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box" viewBox="0 0 16 16">
+    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" length="10" fill="currentColor" class="bi bi-box" viewBox="0 0 16 16">
         <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
      </svg>
     <a class="navbar-brand" href="#"> Sylvia's Portfolio Page</a>
@@ -50,14 +50,24 @@
 <!--Landing Page - HTML-->
     <p>
      Hello, I'm Sylvia Le
-    <br>
+     </p>
+    <h1>
         Welcome to My Personal Portfolio Page!
-    <br>
+    </h1>
+    <p>
         Sophomore @ The University of Washington Bothell |  Hodophile | Foodie 
     </p>
 <!--Linking Image to a URL - JavaScript-->
+    <!--HTML Website-->
+  <class id="image1">
     <a href="https://sylviale101.github.io/HTML/Sylviale101.html">
-        <img alt="html page" src="/Images/html.png" >
+        <img alt="html page" class="figure-img img-fluid rounded" src="/Images/html.png" >
     </a>
-    </body>
+    </class>
+  <!--CSS Website - Javascript-->
+  <class id="image2">
+    <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html"
+      <img alt="css page" class="figure-img img-fluid rounded" src=""
+  </class>
+  </body>
 </html>
