--- a/resumepage.html/landingpage.html
+++ b/resumepage.html/landingpage.html
@@ -67,7 +67,7 @@
   <!--CSS Website - Javascript-->
   <class id="image2">
     <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html"
-      <img alt="css page" class="figure-img img-fluid rounded" src=""
+      <img alt="css page" class="figure-img img-fluid rounded" src="/Images/"
   </class>
   </body>
 </html>
