--- a/resumepage.html/landingpage.html
+++ b/resumepage.html/landingpage.html
@@ -3,7 +3,7 @@
 <head>
     <title>HTML practice page</title>
     <!--Bootstrap Stuff + Linking CSS Style Sheets-->
-    <link rel="stylesheet" type="text/css" href="styleSheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
@@ -63,11 +63,12 @@
     <a href="https://sylviale101.github.io/HTML/Sylviale101.html">
         <img alt="html page" class="figure-img img-fluid rounded" src="/Images/html.png" >
     </a>
-    </class>
+  </class>
   <!--CSS Website - Javascript-->
   <class id="image2">
-    <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html"
-      <img alt="css page" class="figure-img img-fluid rounded" src="/Images/"
+    <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">
+      <img alt="css page" class="figure-img img-fluid rounded" src="/Images/css.PNG">
+    </a>
   </class>
   </body>
 </html>
