--- a/Bootstrap/Sylviale101-bootstrap.html
+++ b/Bootstrap/Sylviale101-bootstrap.html
@@ -72,6 +72,7 @@
 </div>
 <!--Using the Span Tag-->
 <!--Adding a container-->
+<style>
 <div class="container">
     <h2>Using the Span Tag</h2>
         <p>
@@ -247,6 +248,7 @@
                 <p>
                     <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
                 </p>
+</style>
 </div>
 </body>
 </html>
