--- a/resumepage.html/landingpage.html
+++ b/resumepage.html/landingpage.html
@@ -64,11 +64,17 @@
         <img alt="html page" class="figure-img img-fluid rounded" src="/Images/html.png" >
     </a>
   </class>
-  <!--CSS Website - Javascript-->
+  <!--CSS Website-->
   <class id="image2">
     <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">
       <img alt="css page" class="figure-img img-fluid rounded" src="/Images/css.PNG">
     </a>
   </class>
+  <!--Bootstrap Website-->
+    <class id="image3">
+      <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">
+        <img alt="css page" class="figure-img img-fluid rounded" src="/Images/css.PNG">
+     </a>
+    </class>
   </body>
 </html>
